# rresp

./: Cargo.toml  README.md
.github/workflows/: benches.yml
benches/: v2_decode.rs  v2_encode.rs  v3_decode.rs  v3_encode.rs
src/: decode.rs  encode.rs  lib.rs
src/common/: encode.rs  error.rs  mod.rs  parser.rs
src/v2/: ast.rs  frame.rs  lexer.rs  mod.rs  tag.rs  utils.rs
src/v3/: ast.rs  frame.rs  lexer.rs  mod.rs  tag.rs
tests/: v2_decode.rs  v2_encode.rs  v3_decode.rs  v3_encode.rs
