[package]
name = "rresp"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = "2.7.4"
thiserror = "2.0.11"
lexical = "7.0.4"
minivec = "0.5.0"

[dev-dependencies]
criterion = {version ="0.5.1", features = ["html_reports"]}
rand = {version = "0.9.0", features = ["thread_rng"]}

[profile.release]
debug = true

[[bench]]
name = "v2_decode"
harness = false

[[bench]]
name = "v2_encode"
harness = false

[[bench]]
name = "v3_decode"
harness = false

[[bench]]
name = "v3_encode"
harness = false